--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 		<title>WEB700</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link href="css/theme.css" type="text/css" rel="stylesheet" />
+		<link href="/css/theme.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -31,41 +31,7 @@
 		</nav>
 
 		<div class="container">
-			<div class="row">
-				<main class="col-md-12">
-
-
-
-					<!-- Start your code here -->
-					
-					<h1> Welcome to web700 website for the 3rd assigment</h1>
-					<header>-----------------------------------------------------------</header>
-
-					<p> Welcome to my website, I will be demonstrating HTML5 principles and techniques, Routing in Express</p>
-
-					<p> Here you can find the following websites and data sources </p>
-					<a href="/">Home </a> <br>
-					<a href="/about">About </a> <br>
-					<a href="/students">All Students </a> <br>
-					<a href="/htmldemo">Demo</a> <br>
-					<a href="students?2course=3">Students by courses </a> <br>
-					<a href="/student/2">A single student </a> <br>
-					<a href="/tas">All managers </a> <br>
-					<a href="/courses">All courses </a> <br>
-					<br>
-					<p> This site utilizes HTML5: a markup language used for structuring and presenting content on the World Wide Web</p>
-					<p> HTML5 is the latest version of the Hypertext Markup Language (HTML) used for creating web pages and applications.
-						It is designed to make it easier to create and use multimedia content on the web, and includes new features and improvements 
-						to make web development more efficient and effective. Some of the key features of HTML5 include better 
-						support for multimedia content, improved accessibility, and the ability to create complex applications using
-						 a variety of tools and programming languages. HTML5 is supported by all major web browsers and has become the 
-						 standard for web development, making it an essential tool for anyone who wants to create modern, engaging web content</p>
-					<!-- End your code here  -->
-
-
-
-				</main>
-			</div>
+			{{{body}}}
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
