--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,16 +16,14 @@
 			
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="/htmlDemo">Html Demo</a></li>
-					<li class="nav-item"><a class="nav-link" href="/studentsadd">Add Students</a></li>
+                    {{#navLink "/"}}Home{{/navLink}}
+                    {{#navLink "/about"}}About{{/navLink}}
+                    {{#navLink "/htmlDemo"}}Html Demo{{/navLink}}
+                    {{#navLink "/studentsadd"}}Add Students{{/navLink}}
 				</ul>
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="/students">Students</a></li>
-					<li class="nav-item"><a class="nav-link" href="/tas">Teaching Assistants</a></li>
-					<li class="nav-item"><a class="nav-link" href="/courses">Courses</a></li>
-					
+                    {{#navLink "/students"}}Students{{/navLink}}
+                    {{#navLink "/courses"}}Courses{{/navLink}}					
 				</ul>
 			</div>
 		</nav>
